[project]
name = "mb-mms"
version = "0.1.0"
description = ""
authors = [
    {name = "paulocesarvasco",email = "paulocvasco.93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "flask-apscheduler (>=1.13.1,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "tenacity (>=9.0.0,<10.0.0)",
]

[tool.poetry]
packages = [{include = "mb_mms", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
